<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".presentation.view.AddProductFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/addingProductHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/adding_product"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Component.TextInputLayout.Outlined"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Component.EditText"
            android:hint="@string/image_link"
            android:inputType="text"
            android:maxLength="100" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Component.TextInputLayout.Outlined"
        android:layout_marginTop="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Component.EditText"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLength="50" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Component.TextInputLayout.Outlined"
        android:layout_marginTop="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Component.EditText"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        app:backgroundTint="@color/purple_500"
        android:textAllCaps="false"
        android:enabled="false"
        android:text="@string/add_button" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/noteHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/note_header"
        android:textSize="18sp"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/note"
        android:textSize="14sp"
        android:textColor="@color/grey" />
</LinearLayout>